# pandas

./: .cirun.yml  .gitignore  environment.yml  generate_pxi.py  generate_version.py  meson.build  pyproject.toml  requirements-dev.txt  setup.py  test.py
.github/actions/build_pandas/: action.yml
.github/workflows/: 32-bit-linux.yml  asv-bot.yml  cirun-test.yml  deprecation-tracking-bot.yml  docbuild-and-upload.yml  main.yml  python-dev.yml  sdist.yml  ubuntu.yml  unit-tests.yml  wheels.yml
ci/: fix_wheels.py  run_tests.sh  test_wheels.bat  test_wheels.py  test_wheels.sh  test_wheels_windows.bat
doc/: make.py
doc/source/development/: contributing_environment.rst
doc/source/whatsnew/: v1.3.2.rst
pandas/: __init__.py  conftest.py  meson.build
pandas/_libs/: lib.pyx  meson.build
pandas/_libs/tslibs/: meson.build
pandas/core/: algorithms.py  frame.py  series.py
pandas/core/_numba/: extensions.py
pandas/core/groupby/: groupby.py
pandas/core/indexes/: base.py
pandas/io/: html.py  meson.build
pandas/io/sas/: meson.build
pandas/tests/: test_downstream.py
pandas/tests/api/: test_api.py
pandas/tests/groupby/: conftest.py  test_numba.py  test_numeric_only.py
pandas/tests/indexing/: test_coercion.py
pandas/tests/io/: test_compression.py  test_html.py
pandas/tests/plotting/: test_converter.py
scripts/: upload_wheels.sh  validate_unwanted_patterns.py
web/pandas/pdeps/: 0008-inplace-methods-in-pandas.md
